articles/kinect-dk/api/0.2.0/k4atypes.h.md
---
title: k4atypes.h file
description: Kinect For Azure SDK Type definitions. 
author: brenta
ms.author: brenta
ms.date: 01/18/2019
ms.topic: article
keywords: kinect, kinect for azure, k4a, api, sdk, file
---
# k4atypes.h file

Kinect For Azure SDK Type definitions. 

## Syntax


## Definitions

|  Title | Description |
|--------|-------------|
| [K4A_DECLARE_HANDLE](~/api/0.2.0/K4A-DECLARE-HANDLE.md) | Internal use only.  |
| [K4A_DEVICE_DEFAULT](~/api/0.2.0/K4A-DEVICE-DEFAULT.md) | Indicates the caller of  [k4a_device_open](~/api/0.2.0/k4a-device-open.md)  wants to open the default sensor.  |
| [K4A_FAILED](~/api/0.2.0/K4A-FAILED.md) | Validate that a k4a_result_t is failed.  |
| [K4A_INVALID_TIMESTAMP](~/api/0.2.0/K4A-INVALID-TIMESTAMP.md) | A timestamp value that should never be returned by the hardware.  |
| [K4A_SUCCEEDED](~/api/0.2.0/K4A-SUCCEEDED.md) | Validate that a k4a_result_t is successful.  |
| [K4A_WAIT_INFINITE](~/api/0.2.0/K4A-WAIT-INFINITE.md) | An infinite wait time for functions that take a timeout parameter.  |

## Enumerations

|  Title | Description |
|--------|-------------|
| [k4a_buffer_result_t](~/api/0.2.0/k4a-buffer-result-t.md) | Return codes returned by k4a APIs.  |
| [k4a_calibration_model_type_t](~/api/0.2.0/k4a-calibration-model-type-t.md) | Calibration model type.  |
| [k4a_calibration_type_t](~/api/0.2.0/k4a-calibration-type-t.md) | Calibration types Specifies the calibration type.  |
| [k4a_color_control_command_t](~/api/0.2.0/k4a-color-control-command-t.md) | Color (RGB) sensor control commands.  |
| [k4a_color_control_mode_t](~/api/0.2.0/k4a-color-control-mode-t.md) | Color (RGB) sensor control mode.  |
| [k4a_color_resolution_t](~/api/0.2.0/k4a-color-resolution-t.md) | Color (RGB) sensor resolutions.  |
| [k4a_depth_mode_t](~/api/0.2.0/k4a-depth-mode-t.md) | Depth Sensor capture modes.  |
| [k4a_firmware_build_t](~/api/0.2.0/k4a-firmware-build-t.md) | Firmware built type.  |
| [k4a_firmware_signature_t](~/api/0.2.0/k4a-firmware-signature-t.md) | Firmware signature.  |
| [k4a_fps_t](~/api/0.2.0/k4a-fps-t.md) | Color (RGB) sensor frame rates.  |
| [k4a_image_format_t](~/api/0.2.0/k4a-image-format-t.md) | Image types.  |
| [k4a_result_t](~/api/0.2.0/k4a-result-t.md) | Return codes returned by k4a APIs.  |
| [k4a_wait_result_t](~/api/0.2.0/k4a-wait-result-t.md) | Return codes returned by k4a APIs.  |

